# django-todoapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.env
.github/workflows/: pre-commit.yml
src/config/: settings.py  urls.py
src/tasks/: filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py
