[project]
name = "src"
version = "0.1.0"
description = "API for tasks manager app"
authors = [
    {name = "Jonáš Petrovský",email = "jontesek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "markdown (>=3.10.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
