[project]
name = "src"
version = "0.1.0"
description = "API for tasks manager app"
authors = [
    {name = "Jonáš Petrovský",email = "jontesek@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "markdown (>=3.10.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "dj-database-url (>=3.1.0,<4.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "django-structlog (>=10.0.0,<11.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-bandit
    "S",
    # pydocstyle
    "D",
]

ignore = [
    # D100-D107 ignore missing docstrings
    # D203 disabled in favor of D211
    # D213 disabled in favor of D212
    # D406, D407, D408, D409, D413 disabled because we use Google convention.
    "D100","D101","D102","D103","D104","D105","D106","D107","D203","D213","D406","D407","D408","D409",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
